moved models to specific packages controller and service